2004-02-09  Derek Price  <derek@ximbiot.com>

	* lock.c (set_writelock_proc): Remove unused prototype.
	(promotable_lock): Remove unneded whitespace.
	(Promotable_Lock): Correct comments.

2004-02-09  Derek Price  <derek@ximbiot.com>

	* sanity.sh (co-d): Update comments and tests to reflect the current
	state of my side of my discussion with Larry Jones on how these
	commands should behave.

2004-02-09  Derek Price  <derek@ximbiot.com>

	* sanity.sh (emptydir): Add two new tests for how modules -d behaves
	when a directory already exists in the user's workspace.
	(emptydir): Add --keep functionality.

2004-02-09  Derek Price  <derek@ximbiot.com>

	* sanity.sh (co-d): New test to prove `co -d' failure case.

2004-02-05  Derek Price  <derek@ximbiot.com>

	* sanity.sh (recase): Fix typo that creeped in somehow between my last
	test run and my commit.

2004-02-04  Derek Price  <derek@ximbiot.com>

	* modules.c (do_modules): Move content to and make this function a
	wrapper for...
	(_do_modules): ...this new function which can watch for infinite loops
	in alias modules.
	* stack.c (_push, _pop, _unshift, _shift, push_string, pop_string,
	unshift_string, shift_string): New
	functions.
	* stack.h (push_string, pop_string, unshift_string, shift_string: New
	prototypes.
	* sanity.sh (modules): Add check for nested alias loops.

2004-02-04  Derek Price  <derek@ximbiot.com>

	* sanity.sh (recase): Update test names and comments for clarity and
	consistency.

2004-02-04  Derek Price  <derek@ximbiot.com>

	* sanity.sh (recase): Restore some cruft necessary when clients know
	they are on case insensitive systems.

2004-02-03  Derek Price  <derek@ximbiot.com>

	Preserve the case of checked out directories in a path as well as file
	names for client communication with the server.

	* Makefile.am (cvs_SOURCES): Add stack.c & stack.h.
	* stack.c, stack.h: New files.
	* cvs.h: Include stack.h.
	* client.c (send_file_names): Preserve the case of directories in a